@@ -25,6 +25,10 @@ After CMF-1.5.1
       optimization when you want to reindex all the idxs *and* the
       security in a single shot with reindexObject().
 
+    - CMFCatalogAware: allow easy subclassing of the "security indexes"
+      that are reindexed by reindexObjectSecurity(), through the
+      attribute _cmf_security_indexes.
+
     - doActionFor() propagates **kw to isActionSupported() through
       _checkTransitionGuard() until the guard.check() method so that
       StateChangeInfo() can be constructed with those kwargs.
